kubernetes-deploy/02-iam/iam-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-db
  namespace: iam
spec:
  type: ClusterIP
  selector:
    app: iam-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iam-db
  namespace: iam
spec:
  serviceName: iam-db
  replicas: 1
  selector:
    matchLabels:
      app: iam-db
  template:
    metadata:
      labels:
        app: iam-db
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        # Pessimistic Health Checks
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "keycloak"]
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "keycloak"]
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: iam-db-data
