kubernetes-deploy/02-iam/iam-keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: iam
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000

      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0.7
        args: ["start", "--optimized"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "2048Mi"
            cpu: "2000m"
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        volumeMounts:
        - name: shared-certs
          mountPath: /certs
          readOnly: true

      volumes:
      - name: shared-certs
        emptyDir: {}
